# YouAreTyping

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  wsgi.py
.github/: PROPOSAL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
docs/: exporting-importing.md  guide.md  helpful.md  json-export.md  proposal.md
src/: App.scss  App.tsx  MessagesView.tsx  app.py  index.scss  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  conversion.rs  main.rs  menu.rs  messages.rs  setup.rs  structs.rs
src-tauri/src/assets/: template.html
src/components/: MessageInput.scss  MessageInput.tsx  Messages.scss  Messages.tsx  MessagesView.tsx  SettingsView.scss  SettingsView.tsx  tools.ts
src/components/MessagesView/: MessageInput.scss  MessageInput.tsx  MessageSent.tsx  MessageTools.tsx  Messages.scss  MessagesScrollable.tsx
src/components/SettingsView/: SettingsGroup.scss  SettingsGroup.tsx  SettingsRow.scss  SettingsRow.tsx
src/cvaldez/urtyping/: __init__.py  api.py  tools.py  views.py
src/cvaldez/urtyping/static/js/: 3_typing.ts
src/cvaldez/urtyping/static/styles/: 3_typing.scss
src/cvaldez/urtyping/templates/: 3_typing.html
tools/: export-messages.rs
