[package]
name = "you-are-typing"
version = "0.0.0"
description = "Have a conversation with yourself."
authors = ["Carlos Valdez"]
readme = "../README.md"
license = "GPL-3.0-only"
repository = "https://github.com/calejvaldez/YouAreTyping/"
run = "yat"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = ["shell-open"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
